tpl-submissions: add decline reason "resume"

--- a/src/templates/tpl-submissions.html
+++ b/src/templates/tpl-submissions.html
@@ -231,6 +231,7 @@
 					<option value="essay">essay - Submission reads like an essay</option>
 					<option value="npov">npov - Submission is not written in a formal, neutral encyclopedic tone</option>
 					<option value="adv">adv - Submission reads like an advertisement</option>
+					<option value="resume">resume - Submission reads like a résumé</option>
 					<option value="ai">ai - Submission appears to be a large language model output</option>
 				</optgroup>
 				<optgroup label="Duplicate articles">
